--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -1,6 +1,10 @@
 <h1>餐廳後台</h1>
 
-<a href='/admin/restaurants/create'>
+<a href='/admin/restaurants'>Restaurants</a>
+<span>|</span>
+<a href='/admin/users'>Users</a>
+
+<a href='/admin/restaurants/create' class="ml-3">
   <button type="button" class="btn btn-primary">New Restaurant</button>
 </a>
 
