--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -2,6 +2,8 @@
 
 <a href='/admin/restaurants'>Restaurants</a>
 <span>|</span>
+<a href='/admin/categories'>Categories</a>
+<span>|</span>
 <a href='/admin/users'>Users</a>
 
 <br />
