--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -7,7 +7,7 @@
 </div>
 <ul>
     <li>評論數：{{restaurant.Comments.length}}</li>
-    <li>瀏覽次數：</li>
+    <li>瀏覽次數：{{restaurant.viewCounts}}</li>
     <li>按讚數：</li>
 </ul>
 <br />
