--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -14,7 +14,8 @@
     </li>
     {{#each categories}}
     <li class="nav-item">
-        <a class="nav-link {{#ifCond this.id ../categoryId}}active{{/ifCond}}" href="?categoryId={{this.id}}">{{this.name}}</a>
+        <a class="nav-link {{#ifCond this.id ../categoryId}}active{{/ifCond}}"
+            href="?categoryId={{this.id}}">{{this.name}}</a>
     </li>
     {{/each}}
 </ul>
@@ -34,11 +35,19 @@
                 <span class="badge badge-secondary">{{this.categoryName}}</span>
                 <p class="card-text">{{this.description}}</p>
                 {{#if this.isFavorited }}
-                <form action="/favorite/{{this.id}}?_method=DELETE" method="POST"><button type="submit"
-                        class="btn btn-danger">移除最愛</button></form>
+                <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" style="display: inline-block;"><button type="submit"
+                        class="btn btn-danger mr-1">移除最愛</button></form>
                 {{else}}
-                <form action="/favorite/{{this.id}}" method="POST"><button type="submit"
-                        class="btn btn-primary">加到最愛</button></form>
+                <form action="/favorite/{{this.id}}" method="POST" style="display: inline-block;"><button type="submit"
+                        class="btn btn-primary mr-1">加到最愛</button></form>
+                {{/if}}
+
+                {{#if this.isLiked }}
+                <form action="/like/{{this.id}}?_method=DELETE" method="POST"
+                    style="display: inline-block;"><button type=" submit" class="btn btn-danger">Unlike</button></form>
+                {{else}}
+                <form action=" /like/{{this.id}}" method="POST" style="display: inline-block;"><button type="submit"
+                        class="btn btn-primary">Like</button></form>
                 {{/if}}
             </div>
         </div>
