--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -8,6 +8,9 @@
     <li class="nav-item">
         <a class="nav-link" href="/users/top">美食達人</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/restaurants/top">TOP10 人氣餐廳</a>
+    </li>
 </ul>
 <br />
 
@@ -38,16 +41,16 @@
                 <span class="badge badge-secondary">{{this.categoryName}}</span>
                 <p class="card-text">{{this.description}}</p>
                 {{#if this.isFavorited }}
-                <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" style="display: inline-block;"><button type="submit"
-                        class="btn btn-danger mr-1">移除最愛</button></form>
+                <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" style="display: inline-block;"><button
+                        type="submit" class="btn btn-danger mr-1">移除最愛</button></form>
                 {{else}}
                 <form action="/favorite/{{this.id}}" method="POST" style="display: inline-block;"><button type="submit"
                         class="btn btn-primary mr-1">加到最愛</button></form>
                 {{/if}}
 
                 {{#if this.isLiked }}
-                <form action="/like/{{this.id}}?_method=DELETE" method="POST"
-                    style="display: inline-block;"><button type=" submit" class="btn btn-danger">Unlike</button></form>
+                <form action="/like/{{this.id}}?_method=DELETE" method="POST" style="display: inline-block;"><button
+                        type=" submit" class="btn btn-danger">Unlike</button></form>
                 {{else}}
                 <form action=" /like/{{this.id}}" method="POST" style="display: inline-block;"><button type="submit"
                         class="btn btn-primary">Like</button></form>
